WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
215464
macCatalyst: Granting location permission doesn't allow geolocation access
https://bugs.webkit.org/show_bug.cgi?id=215464
Summary
macCatalyst: Granting location permission doesn't allow geolocation access
Tim Horton
Reported
2020-08-13 13:35:32 PDT
macCatalyst: Granting location permission doesn't allow geolocation access
Attachments
Patch
(1.89 KB, patch)
2020-08-13 13:36 PDT
,
Tim Horton
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2020-08-13 13:36:09 PDT
Created
attachment 406539
[details]
Patch
Tim Horton
Comment 2
2020-08-13 13:36:11 PDT
<
rdar://problem/64719458
>
EWS
Comment 3
2020-08-13 15:19:21 PDT
Committed
r265626
: <
https://trac.webkit.org/changeset/265626
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 406539
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug