macCatalyst: Granting location permission doesn't allow geolocation access https://bugs.webkit.org/show_bug.cgi?id=215464 <rdar://problem/64719458>

Reviewed by Wenson Hsieh.

* Misc/WebGeolocationCoreLocationProvider.mm:
(-[WebGeolocationCoreLocationProvider requestGeolocationAuthorization]):
Un-ifdef this code that was ifdeffed in r229963 during macCatalyst
bring-up and doesn't need to be anymore.


Canonical link: https://commits.webkit.org/228240@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@265626 268f45cc-cd09-0410-ab3c-d52691b4dbfc